update deprecated